# ddt_rl_isaacgym_usable

./: .gitignore  README.md  start.txt  重要修改
algorithm/: np3o.py
configs/: __init__.py
configs/base/: base_task.py  legged_robot.py  legged_robot_config.py
configs/d1/: __init__.py  d1_flat_config.py  d1_rough_config.py
configs/d1h/: __init__.py  d1h_flat_config.py  d1h_rough_config.py
configs/tita/: __init__.py  tita.py  tita_flat_config.py
modules/: __init__.py  actor_critic.py  onnx_export.py
plans/: d1h_one_leg_stand_plan.md
resources/d1/urdf/: robot.urdf  robot_rough.urdf
resources/d1h/: CMakeLists.txt  package.xml
resources/d1h/mujoco/: robot.xml  scene.xml
resources/d1h/urdf/: robot.urdf
resources/d1h/xacro/: robot.xacro  ros2control.xacro  single_robot.xacro
resources/tita/urdf/: robot.urdf
runner/: on_constraint_policy_runner.py
scripts/: check_onnx_dimensions.py  deploy_onnx_model.py  simple_play.py  test_env.py  train.py
utils/: helpers.py  terrain.py
